--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <span style="color:#f00;">Hello</span>
+    <span style="color:#f00;">Hello again</span>
 </body>
 </html>
